--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -86,6 +86,16 @@ h4 {
     }
 }
 
+/* Background lines */
+
+.lines {
+    position: absolute;
+    width: 60%;
+    top: 0;
+    left: 0;
+    z-index: -10;
+}
+
 /* Header */
 
 header .logo span {
